--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\hofma\\envs\\dwgroup\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\hofma\\envs\\django\\Scripts\\python.exe"
 }
